bottom navigation and navbar z-index issue resolved

--- a/src/features/BottomNavigation/index.scss
+++ b/src/features/BottomNavigation/index.scss
@@ -6,7 +6,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1;
     transition: transform 0.3s ease-in-out;
     border-top: 1px solid rgb(221, 221, 221);
     overflow-x: auto;
