--- a/src/features/NavBar/index.scss
+++ b/src/features/NavBar/index.scss
@@ -37,6 +37,6 @@
     }
 
     @media (max-width: 767px) {
-        z-index: 1;
+        z-index: 2;
     }
 }
